# 3-python-package-four-locals

./: .gitignore  Pipfile  README.md  demo.py  pyproject.toml
.github/workflows/: Pipfile  build.yaml  event-logger.yml
devdice/: __init__.py  devdice.py
tests/: test_chooser.py  test_eliminator.py  test_flip_a_coin.py  test_flipacoin.py  test_magicEightBall.py  test_magic_eight_ball.py  test_random_color_generator.py  test_randomcolorgenerator.py  test_rock_paper_scissors.py  test_rockpaperscissors.py  test_roll_a_dice.py  test_rolladice.py  test_roulette.py
