[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "devdice"
description = "A package developed with pipenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.2"
authors = [
  { name="Benjamin DeWeese" },
  { name="Forrest Williams" },
  { name="John Ma" },
  { name="Edwin Chen" },

]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/nyu-software-engineering/python-package-example"
"Repository" = "https://github.com/nyu-software-engineering/python-package-example.git"
"Bug Tracker" = "https://github.com/nyu-software-engineering/python-package-example/issues"

[project.scripts]
devdice = "devdice.__main__:main"